plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev.legacyforge' version '2.0.144'
    id "me.modmuss50.mod-publish-plugin" version "2.2.0"
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
}

dependencies {
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

base {
    archivesName = "${mod_id}-${mod_loader.toLowerCase(Locale.ENGLISH)}-${minecraft_version}"
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json"
    ])
}


configurations {
    runtimeClasspath.extendsFrom localRuntime
}

obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    version = project.forge_version
    validateAccessTransformers = true

    runs {
        client {
            client()
        }

        server {
            server()
            programArgument '--nogui'
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources {
    exclude('**/wip', '.cache') // exclude project files and the cache from the jar
    srcDir 'src/generated/resources'
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             forge_version          : forge_version,
                             forge_version_range    : forge_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
legacyForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

publishMods {
    changelog = rootProject.file("CHANGELOG-LATEST.md").text // thank you evanbones
    type = STABLE
    file = tasks.named("jar").flatMap { it.archiveFile }
    version = "${project.version}+${mod_loader.toLowerCase(Locale.ENGLISH)}-${minecraft_version}"
    displayName = "${mod_name} ${project.version} for ${mod_loader} ${minecraft_version}"
    modLoaders.add(mod_loader.toLowerCase(Locale.ENGLISH))

    //noinspection GroovyAssignabilityCheck // What the heck!
    modrinth {
        accessToken = providers.gradleProperty("MODRINTH_PUBLISH_TOKEN").orNull
        projectId = "F2pk6al7"
        environment = CLIENT_AND_SERVER
        minecraftVersions.add("${minecraft_version}")
    }

    //noinspection GroovyAssignabilityCheck
    github {
        accessToken = providers.gradleProperty("GITHUB_PUBLISH_TOKEN").orNull
        repository = "vercte/gleeful-creepers"
        tagName = "20.1/forge/${project.version}"
        commitish = "20.1/forge/dev"
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
